Signup: Make sure the password field does not have extra margin
When you toggle the password field to show the password, it jumps
because regular fields have extra bottom margin.

--- a/client/blocks/signup-form/style.scss
+++ b/client/blocks/signup-form/style.scss
@@ -5,7 +5,8 @@
 	transition: none;
 
 	&.is-error,
-	&[type='password'] {
+	&[type='password'],
+	&[name='password'] {
 		margin-bottom: 0;
 	}
 
